Added support for multiple data providers (Polygon, FMP, Finnhub, TwelveData)

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,10 @@
 # numpy==1.26.4
 # requests==2.32.3
 # yfinance==0.2.40
+# pandas-datareader==0.10.0 # Stooq fallback
+# (Polygon, FMP, Finnhub, TwelveData all via plain requests)
+
+
 
 
 # ---------------------------------------------------------------------------------
